Final checks and updates

--- a/_/less/content.less
+++ b/_/less/content.less
@@ -54,6 +54,13 @@ article.tlw_landing_page {
 	.pad(0;1.5;0;1.5);
 	.line-h(3);
 	.mag-bot(1.5);
+		&.label-success {
+		.bg-col-green;	
+		}
+		
+		&.label-danger {
+		.bg-col-red;	
+		}
 	}
 	
 	.vacancy-details {
