--- a/_/less/sections.less
+++ b/_/less/sections.less
@@ -337,41 +337,8 @@ section#contact-us-banner {
 	}	
 }
 
-.child-page-links {
-
-	a.btn {
-	.font-slab-serif;
-	.caps;
-	.no-rounded;
-	.font-size(1.6);	
-	.pad(0;6;0;2);
-	.line-h(3.8);
-	.h(4);
-	.bg-col(@wht);
-	.txt-col-grayDk;
-	.border(@grayDk; 0.1);
-	.rel;
-	.mag-right(1);
-	.mag-bot(1);
-		&:after {
-		content: "\f105";	
-		font-family: FontAwesome;	
-		.abs;
-		.right(0);
-		.top(0);
-		.line-h(3.8);
-		.h(3.8);
-		.pad-right(2);	
-		}
-		
-		&:active {
-		.bg-col-grayDk;
-		.txt-col-wht;
-		}
-	}
-}
-
 // GENERAL PAGE SECTION STYLES
+
 .pg-section {
 	h2.section-header {
 	.font-slab-serif;
@@ -403,6 +370,40 @@ section#contact-us-banner {
 		p {
 		.font-size(1.6);
 		.line-h(2.1);	
+		}
+	}
+}
+
+.child-page-links {
+
+	a.btn {
+	.font-slab-serif;
+	.caps;
+	.no-rounded;
+	.font-size(1.6);	
+	.pad(0;6;0;2);
+	.line-h(3.8);
+	.h(4);
+	.bg-col(@wht);
+	.txt-col-grayDk;
+	.border(@grayDk; 0.1);
+	.rel;
+	.mag-right(1);
+	.mag-bot(1);
+		&:after {
+		content: "\f105";	
+		font-family: FontAwesome;	
+		.abs;
+		.right(0);
+		.top(0);
+		.line-h(3.8);
+		.h(3.8);
+		.pad-right(2);	
+		}
+		
+		&:active {
+		.bg-col-grayDk;
+		.txt-col-wht;
 		}
 	}
 }
@@ -565,91 +566,6 @@ section#contact-us-banner {
 			}
 		}	
 	}
-}
-
-// DOWNLOADS SECTION
-#downloads-section {
-	h2 {
-	.mag-bot(1);	
-	}	
-	
-	a.download-link {
-	.rel;
-	.block;
-	width: 100%;	
-	height: 342px;
-	.h(40);
-	.mag-top(3);
-	.border(@grayDk; 0.1);
-	.animated;
-		
-		span.bg-img {
-		.abs;
-		.top(0);
-		.left(0);
-		.right(0);
-		.bottom(8);
-		.border-bot(@grayDk; 0.1);
-		.over-hide;
-			.inner {
-			.abs;
-			.top(1);
-			.left(1);
-			.right(1);
-			.bottom (1);
-			.bg-repeat(no-repeat);
-			background-position: center center;
-			.bg-size('contain');
-			.transition;
-			}
-		}
-		
-		span.title {
-		.abs;
-		.bottom(0);
-		.left(0);
-		.right(0);
-		.pad-left(2);
-		.pad-right(2);
-		.bg-col-grayDk;
-		.txt-col-wht;
-		.font-slab-serif;
-		.font-size(1.6);
-		.line-h(8);
-		.caps;	
-		.text-center;
-		.transition;
-			span {
-			.in-block;
-			.line-h(1.6);	
-			vertical-align: middle;
-			}
-		}
-			
-		&:active {
-		.border-col(@red);
-		
-			span.bg-img {
-			.border-col(@red);
-			.bg-col-red;
-			}
-			
-			span.title  {
-			.bg-col-red;	
-				
-				&:after {
-				.fadeOutDown;	
-				}
-			}
-		}
-	}
-	
-	.col-xs-4:first-child a.download-link, 
-	.col-xs-4:nth-child(2) a.download-link,
-	.col-xs-4:nth-child(3) a.download-link {
-	.mag-top(0);	
-	}
-	
 }
 
 // OUR TEAM SECTION STYLES
@@ -878,6 +794,192 @@ section#contact-us-banner {
 
 }
 
+// VIDEOS SECTION
+#video-section {
+	
+	h2 {
+	.mag-bot(1);	
+	}
+	
+	a.video-link {
+	.block;
+	width: 100%;
+	.h(22);
+	.bg-repeat(no-repeat);
+	background-position: center center;
+	.bg-size();
+	.no-rounded;
+	.rel;
+	.mag-top(3);
+	.border(@grayDk; 0.1);
+	
+		&:after {
+		content: "\f144";	
+		font-family: FontAwesome;
+		.font-size(7);
+		.line-h(22);
+		text-align: center;
+		.txt-col-grayDk;
+		.abs;
+		.left(0);
+		.top(0);
+		width: 100%;
+		height: 100%;
+		.bg-col(@wht);
+		.opacity(0.5);
+		.transition(0.4s);
+		.no-text-dec;
+		}
+		
+		&:active {
+			
+			&:after {
+			.opacity(0.8);	
+			}
+		}
+		
+	}
+	
+	.col-xs-6:first-child a.video-link, 
+	.col-xs-6:nth-child(2) a.video-link {
+	.mag-top(0);	
+	}
+}
+
+// DOWNLOADS SECTION
+#downloads-section {
+	h2 {
+	.mag-bot(1);	
+	}	
+	
+	a.download-link {
+	.rel;
+	.block;
+	width: 100%;	
+	height: 342px;
+	.h(40);
+	.mag-top(3);
+	.border(@grayDk; 0.1);
+	.animated;
+		
+		span.bg-img {
+		.abs;
+		.top(0);
+		.left(0);
+		.right(0);
+		.bottom(8);
+		.border-bot(@grayDk; 0.1);
+		.over-hide;
+			.inner {
+			.abs;
+			.top(1);
+			.left(1);
+			.right(1);
+			.bottom (1);
+			.bg-repeat(no-repeat);
+			background-position: center center;
+			.bg-size('contain');
+			.transition;
+			}
+		}
+		
+		span.title {
+		.abs;
+		.bottom(0);
+		.left(0);
+		.right(0);
+		.pad-left(2);
+		.pad-right(2);
+		.bg-col-grayDk;
+		.txt-col-wht;
+		.font-slab-serif;
+		.font-size(1.6);
+		.line-h(8);
+		.caps;	
+		.text-center;
+		.transition;
+			span {
+			.in-block;
+			.line-h(1.6);	
+			vertical-align: middle;
+			}
+		}
+			
+		&:active {
+		.border-col(@red);
+		
+			span.bg-img {
+			.border-col(@red);
+			.bg-col-red;
+			}
+			
+			span.title  {
+			.bg-col-red;	
+				
+				&:after {
+				.fadeOutDown;	
+				}
+			}
+		}
+	}
+	
+	.col-xs-4:first-child a.download-link, 
+	.col-xs-4:nth-child(2) a.download-link,
+	.col-xs-4:nth-child(3) a.download-link {
+	.mag-top(0);	
+	}
+	
+}
+
+//GALLERY SECTION
+#gallery-section {
+	.gallery-items {
+	//.pad-bot(3);
+	z-index: 2;	
+	.rel;
+	}
+	
+	.gallery-items-inner {
+	.pad-bot(2);
+	.over-hide;
+	text-align: center;
+	}
+	
+	.gallery-item {
+	.w(3);
+	.h(3);
+	.in-block;
+	.mag-left(0.5);
+	.mag-right(0.5);
+		a {
+		.block;
+		height: 100%;
+		.bg-col-gray;
+		.no-text-dec;
+		.rounded(100%);	
+			&:active {
+			.bg-col-grayDk;
+			}
+		}	
+		
+		&.active {
+			a {
+			.bg-col-red;
+			pointer-events: none;	
+			}
+		}
+	}	
+	
+	.gallery-items-viewer {
+	.h(40);
+		img {
+		.border(@grayDk; 0.1);
+		.h(40);
+		width: auto;
+		}
+	}
+}
+
 // LOCATION MAP SECTION
 #wide-map {
 	.container-fluid {
@@ -989,8 +1091,8 @@ overflow: hidden;
 	left: 50%;
 	top: 50%;
 	.translate(-50%, -50%);
-	.w(80);
-	.h(45);
+	.w(65);
+	.h(36.6);
 	.bg-col(@grayDk);
 	.drop-shadow(0,0, 40px, 0.7);
 	overflow: hidden;
