Add icon column for main text.

--- a/_/less/content.less
+++ b/_/less/content.less
@@ -128,6 +128,44 @@ article.tlw_landing_page {
 		font-style: normal;
 		}
 		
+		.video-container {
+			.rel;
+			padding-bottom: 56.25%;
+			padding-top: 30px;
+			.h(0);
+			.over-hide;
+		}
+		
+		.video-container iframe,  
+		.video-container object,  
+		.video-container embed {
+			.abs;
+			.top(0);
+			.left(0);
+			width: 100%;
+			height: 100%;
+		}
+		
+		iframe, object, embed {
+		  max-width: 100%;
+		}
+		
+		.with-icon-img {
+		.rel;
+		
+			.icon-img {
+			.abs;
+			.left(0);
+			.top(0);
+			.w(10);
+			.h(10);
+			}
+			
+			.icon-left-txt {
+			.pad-left(13);	
+			}
+		}
+		
 		.well {
 		.bg-col(@wht);
 		.border(@grayDk; 0.1);
