Add video banner file

--- a/_/less/sections.less
+++ b/_/less/sections.less
@@ -48,6 +48,9 @@ section#video-banner {
 	.rel;
 	.h(40);
 	.over-hide;
+		@media screen and (orientation: landscape) {
+		.h(40);	
+		}
 	}
 	
 	video#service-video { 
