--- a/_/less/criticalCSS.less
+++ b/_/less/criticalCSS.less
@@ -14,6 +14,12 @@ background-color: @col;
 background-color: hsla(hue(@col), saturation(@col), lightness(@col), @opacity);
 }
 
+.rounded(@radius: 2px) {
+-webkit-border-radius: @radius;
+-moz-border-radius: @radius;
+border-radius: @radius;
+}
+
 .font-slab-serif {
 font-family: @slab-serif;
 font-weight: normal; 
@@ -46,15 +52,13 @@ font-family: sans-serif;
 	}
 
 	
-	/*
-&.loading {
+	&.loading {
 	-webkit-filter: blur(10px);
 	-moz-filter: blur(10px);
 	-o-filter: blur(10px);
 	-ms-filter: blur(10px);
 	filter: blur(10px);	
 	}
-*/
 
 	.tlw-wrapper {
 	position: relative;
@@ -70,7 +74,8 @@ font-family: sans-serif;
 	left: 0;
 	bottom: 0px;
 	right: 0px;
-	overflow: hidden;
+	overflow: auto;
+	-webkit-overflow-scrolling: touch;
 	padding-top: 110px;
 	}
 
@@ -148,7 +153,6 @@ font-family: sans-serif;
 	width: 100%;	
 	}
 	
-	
 	@media (min-width:992px) {
 			
 		.col-md-10 {
@@ -160,6 +164,48 @@ font-family: sans-serif;
 		margin-left: 8.33333333%;	
 		}	
 			
+	}
+	
+	.bg-col-red {
+	background-color: @red;	
+	}
+	
+	.bg-col-blue {
+	background-color: @blue;	
+	}
+	
+	.rule {
+	margin-top: 30px;
+	margin-bottom: 30px;
+	height: 1px;
+	position: relative;
+		&.mag-top-60 {
+		margin-top: 60px;	
+		}
+		&:before, &:after {
+		content: "";
+		position: absolute;
+		height: 1px;
+		width: 50%;
+		}
+	
+		&:before {
+		bottom: -1px;
+		background-image: -webkit-gradient(linear, 0 0, 100% 0, from(transparent), to(@gray));
+		background-image: -webkit-linear-gradient(left, transparent, @gray);
+		background-image: -moz-linear-gradient(left, transparent, @gray);
+		background-image: -o-linear-gradient(left, transparent, @gray);
+		}
+	
+		&:after {
+		right: 0px;
+		bottom: -1px;
+		background-image: -webkit-gradient(linear, 0 0, 100% 0, from(@gray), to(transparent));
+		background-image: -webkit-linear-gradient(left, @gray, transparent);
+		background-image: -moz-linear-gradient(left, @gray, transparent);
+		background-image: -o-linear-gradient(left, @gray, transparent);
+		}
+
 	}
 	
 	#top-nav, 
@@ -174,6 +220,111 @@ font-family: sans-serif;
 	#wide-map-canvas,
 	.location-box, {
 	display: none;	
+	}
+	
+	.main-txt {
+		hr {
+		border: none;
+		.rule;
+		}
+		
+		.video-container {
+		position: relative;
+		padding-bottom: 56.25%;
+		padding-top: 30px;
+		height: 0px;
+		overflow: hidden;
+		}
+		
+		.video-container iframe,  
+		.video-container object,  
+		.video-container embed {
+		position: absolute;
+		top: 0px;
+		left: 0px;
+		width: 100%;
+		height: 100%;
+		}
+		
+		iframe, object, embed {
+		  max-width: 100%;
+		}
+		
+		h1 {
+		font-family: @reg-font;
+		font-size: 35px;
+		line-height: 40px;
+		margin-bottom: 30px;
+		margin-top: 0px;
+		color: @grayDk;
+		font-weight: normal;
+			small {
+			font-size: 30px;
+			}
+		}
+		
+		h2, h3, h4, h5 {
+		.font-slab-serif;	
+		}
+		
+		h2, h3, h4, h5 {
+		font-size: 25px;
+		line-height: 30px;
+		margin-bottom: 20px;
+		color: @gray;
+		}
+		
+		a {
+		color: @red;
+		font-weight: bold;
+			&:hover, &:active, &:focus {
+			color: @redMid;
+			}
+		}
+		
+		p {
+			&.lead {
+			font-weight: bold;
+			}
+		}
+		
+		p, ul, ol {
+		font-family: @reg-font;
+		font-size: 20px;
+		line-height: 30px;
+		margin-bottom: 30px;
+		color: @grayDk;
+			&:last-child {
+			margin-bottom: 0px;	
+			}	
+		}
+		
+		i.txt-icon {
+		display: block;
+		float: left;
+		margin-right: 30px;
+		margin-bottom: 10px;
+		width: 150px;
+		line-height: 150px;
+		.rounded(100%);	
+		.bg-col-red;
+		text-align: center;
+		color: white;
+		.font-slab-serif;
+		font-size: 100px;
+		font-style: normal;
+		}
+		
+		#content-extra {
+			&.closed {
+			height: 0px;
+			overflow: hidden;;	
+			}
+		
+			#content-extra-inner {	
+			position: relative;
+			}
+		}
 	}
 		
 	header[role="banner"] {
@@ -359,14 +510,21 @@ font-family: sans-serif;
 		}
 	}
 	
+	#hp-form {
+	margin-top: 40px;
+	margin-bottom: 40px;
+		.gform_wrapper {
+		border: 1px solid @grayDk;	
+		min-height: 150px;
+		}
+		
+		form {
+		display: none;	
+		}
+	}
+	
 	#footer-info {
-	position: fixed;
-	left: 0px;
-	bottom: 0px;
-	width: 100%;
-	height: 100px;
-	background-color: @grayDk;
-	border-top: 4px solid white;
+	
 	}
 
 }
