--- a/_/less/criticalCSS.less
+++ b/_/less/criticalCSS.less
@@ -31,6 +31,25 @@ width: 100%;
 height: 100%;	
 }
 
+.sr-only {
+position: absolute;
+width: 1px;
+height: 1px;
+padding: 0;
+margin: -1px;
+overflow: hidden;
+clip: rect(0, 0, 0, 0);
+border: 0;
+}
+
+body.loading {
+-webkit-filter: blur(10px);
+-moz-filter: blur(10px);
+-o-filter: blur(10px);
+-ms-filter: blur(10px);
+filter: blur(10px);	
+}
+
 body.atfc-tablet-css {
 font-family: @reg-font;
 width: 100%;
@@ -49,15 +68,6 @@ font-family: sans-serif;
 	
 	&:after {
 	clear: both;	
-	}
-
-	
-	&.loading {
-	-webkit-filter: blur(10px);
-	-moz-filter: blur(10px);
-	-o-filter: blur(10px);
-	-ms-filter: blur(10px);
-	filter: blur(10px);	
 	}
 
 	.tlw-wrapper {
@@ -165,22 +175,14 @@ font-family: sans-serif;
 		}	
 			
 	}
-	
-	.bg-col-red {
-	background-color: @red;	
-	}
-	
-	.bg-col-blue {
-	background-color: @blue;	
-	}
-	
+
 	.rule {
 	margin-top: 30px;
 	margin-bottom: 30px;
 	height: 1px;
 	position: relative;
-		&.mag-top-60 {
-		margin-top: 60px;	
+		&.mag-top-40 {
+		margin-top: 40px;	
 		}
 		&:before, &:after {
 		content: "";
@@ -214,7 +216,6 @@ font-family: sans-serif;
 	.page-tools,
 	.header .header-action-btns,
 	.header .tel-num,
-	#continue-read-btn,
 	#route-finder-modal,
 	#theme-my-login,
 	#wide-map-canvas,
@@ -222,175 +223,82 @@ font-family: sans-serif;
 	display: none;	
 	}
 	
-	.main-txt {
-		hr {
-		border: none;
-		.rule;
-		}
-		
-		.video-container {
-		position: relative;
-		padding-bottom: 56.25%;
-		padding-top: 30px;
-		height: 0px;
-		overflow: hidden;
-		}
-		
-		.video-container iframe,  
-		.video-container object,  
-		.video-container embed {
-		position: absolute;
-		top: 0px;
-		left: 0px;
-		width: 100%;
-		height: 100%;
-		}
-		
-		iframe, object, embed {
-		  max-width: 100%;
-		}
-		
-		h1 {
-		font-family: @reg-font;
-		font-size: 35px;
-		line-height: 40px;
-		margin-bottom: 30px;
-		margin-top: 0px;
-		color: @grayDk;
-		font-weight: normal;
-			small {
-			font-size: 30px;
-			}
-		}
-		
-		h2, h3, h4, h5 {
-		.font-slab-serif;	
-		}
-		
-		h2, h3, h4, h5 {
-		font-size: 25px;
-		line-height: 30px;
-		margin-bottom: 20px;
-		color: @gray;
-		}
-		
-		a {
-		color: @red;
-		font-weight: bold;
-			&:hover, &:active, &:focus {
-			color: @redMid;
-			}
-		}
-		
-		p {
-			&.lead {
-			font-weight: bold;
-			}
-		}
-		
-		p, ul, ol {
-		font-family: @reg-font;
-		font-size: 20px;
-		line-height: 30px;
-		margin-bottom: 30px;
-		color: @grayDk;
-			&:last-child {
-			margin-bottom: 0px;	
-			}	
-		}
-		
-		i.txt-icon {
-		display: block;
-		float: left;
-		margin-right: 30px;
-		margin-bottom: 10px;
-		width: 150px;
-		line-height: 150px;
-		.rounded(100%);	
-		.bg-col-red;
-		text-align: center;
-		color: white;
-		.font-slab-serif;
-		font-size: 100px;
-		font-style: normal;
-		}
-		
-		#content-extra {
-			&.closed {
-			height: 0px;
-			overflow: hidden;;	
-			}
-		
-			#content-extra-inner {	
-			position: relative;
-			}
-		}
-	}
-		
-	header[role="banner"] {
-	.trans-bg(@wht; 0.9);
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	right: 0px;
-	height: 80px;
-	z-index: 2;
-	overflow: hidden;
-		
-		a.logo {
-		display: block;
-		height: 75px;
-		max-width: 220px;
-		background-image: url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/img/tlw-logo-wide.svg');			
-		background-repeat: no-repeat;
-		background-position: center center;
-		background-size: contain;
-		}
-		
+	#continue-read-btn {
+	border-radius: 0px;
+	border: 1px solid @grayLt;
+	background-color: @grayLt;
+	color: @grayLt;
+	height: 40px;
+	width: 100%;
+		i {
+		display: none;
+		}	
 	}
 	
 	#breadcrumbs {
-	background-color: #E9E9E9;
-	border-bottom: 4px solid white;	
-	height: 44px;
-		.container-fluid {
+	color: @gray;
+	font-size: 16px;
+	line-height: 16px;
+	margin-bottom: 30px;
+		.breadcrumbs-inner {
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;	
+		}
+		a {
+		color: @gray;
+		text-decoration: none;
+		}
+	}
+	
+	#slim-top-banner {
+	height: 250px;
+		
+		.container-fluid, .row, .col-md-10 {
+		height: 100%;
+		position: relative;	
+		}
+		
+		.img {
+		position: absolute;
+		top: 0px;
+		left: 15px;
+		right: 15px;
+		height: 100%;
+		background-image: none !important;	
+		background-color: @grayLt;
+		}
+	
+		.banner-title, i {
 		display: none;	
 		}
 	}
 	
-	.contact-links {
+	#contact-us-banner {
 	position: relative;
-	padding-top: 40px;
-	padding-bottom: 30px;
-	background-repeat: no-repeat;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-	background-position: center center;
-	border-bottom: 4px solid white;	
-	
+	height: 380px;
+		
+		.container-fluid, .row, .col-md-10 {
+		height: 100%;
+		position: relative;	
+		}
+		
+		.img {
+		position: absolute;
+		top: 0px;
+		left: 15px;
+		right: 15px;
+		height: 100%;
+		background-image: none !important;	
+		background-color: @grayLt;
+		}
+		
 		.intro {
-		text-indent: -9999px;
-		height: 50px;
-		margin-bottom: 40px;	
+		display: none;
 		}
 		
 		.contact-info {
-		position: relative;
-		z-index: 2;
-			a.contact-info-link, .contact-info-label {
-			display: block;
-			text-indent: -9999px;
-			background-color: #C60751;
-			height: 50px;
-			position: relative;
-			margin-bottom: 20px;
-			padding-left: 40px;
-			-webkit-box-shadow: 0 3px 10px #000000;
-			-moz-box-shadow: 0 3px 10px #000000;
-			box-shadow: 0 3px 10px #000000;	
-			}
+		display: none;
 		}
 	}
 	
@@ -432,51 +340,396 @@ font-family: sans-serif;
 			}
 			
 			span.img {
-			position: absolute;
-			top: 0px;
-			left: 0px;
-			right: 0px;
-			bottom: 0px;
-			background-size: cover;
-			background-repeat: no-repeat;
-			background-position: center center;	
+			display: none;
 			}
 			
 			span.title {
-			position: absolute;
-			left: 0px;
-			right: 0px;
-			bottom: 0px;
-			.trans-bg(@wht; 0.8);
-			height: 50px;
-				span {
-				display: none;
-				}	
+			display: none;
 			}
 			
 			a {
 			display: block;
 			height: 100%;
-			.font-slab-serif;
-			text-decoration: none;
-			position: relative;
-			overflow: hidden;
+			background-color: @grayLt;
 			}		
 
 		}
 	}
 	
-	#slim-top-banner {
-	height: 200px;
-	height: 20vh;
-	position: relative;
-	overflow: hidden;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center center;
-	border-bottom: 4px solid white;
+	section#video-banner {
+	
+		.video-wrapper {
+		border: 1px solid @grayDk;
+		height: 414px;
+		overflow: hidden;
+			@media screen and (orientation: landscape) {
+			height: 462px;
+			}
+		}
+		
+		video#service-video { 
+		display: none;
+		}
+		
+		.banner-title {
+		background-color: @grayLt;
+		height: 100px;
+		margin-top: 35px;
+			span {
+			display: none;	
+			}
+		}
+	}
+	
+	.hp-sidebar {
+	padding-top: 10px;
+		.feefo-panel {
+		background-color: @grayLt;
+		margin-bottom: 50px;	
+		min-height: 186px;
+			i, h3, div {
+				display: none;
+			}
+		}
+		
+		a {
+		display: none;	
+		}
+	
+	}
+	
+	.service-label {
+	font-size: 16px;
+	line-height: 30px;
+	margin-bottom: 10px;
+	border: 1px solid @grayLt;
+	background-color: @grayLt;
+	display: inline-block;
+	color: @grayLt;
 	}
 		
+	.main-txt {
+		hr {
+		border: none;
+		.rule;
+		}
+		
+		.video-container {
+		position: relative;
+		padding-bottom: 56.25%;
+		padding-top: 30px;
+		height: 0px;
+		overflow: hidden;
+		}
+		
+		.video-container iframe,  
+		.video-container object,  
+		.video-container embed {
+		position: absolute;
+		top: 0px;
+		left: 0px;
+		width: 100%;
+		height: 100%;
+		}
+		
+		iframe, object, embed {
+		position: absolute;
+		top: 0px;
+		left: 0px;
+		width: 100%;
+		height: 100%;
+		}
+		
+		h1 {
+		font-family: @reg-font;
+		font-size: 30px;
+		line-height: 35px;
+		margin-bottom: 20px;
+		margin-top: 0px;
+		color: @grayDk;
+		font-weight: 500;
+		
+			small {
+			font-size: 20px;
+			}
+		}
+		
+		h2, h3, h4, h5 {
+		.font-slab-serif;	
+		}
+		
+		h2, h3, h4, h5 {
+		font-size: 25px;
+		line-height: 30px;
+		margin-bottom: 20px;
+		color: @gray;
+		}
+		
+		a {
+		color: @gray;
+		font-weight: bold;
+		}
+		
+		p {
+			&.lead {
+			font-weight: bold;
+			}
+		}
+		
+		p, ul, ol {
+		font-family: @reg-font;
+		font-size: 16px;
+		line-height: 20px;
+		margin-bottom: 20px;
+		color: @grayDk;
+			&:last-child {
+			margin-bottom: 0px;	
+			}	
+		}
+		
+		i.txt-icon {
+		display: block;
+		float: left;
+		margin-right: 20px;
+		margin-bottom: 10px;
+		width: 80px;
+		line-height: 80px;
+		.rounded(100%);	
+		background-color: @gray;
+		text-align: center;
+		color: white;
+		.font-slab-serif;
+		font-size: 50px;
+		font-style: normal;
+		}
+		
+		#content-extra {
+			&.closed {
+			height: 0px;
+			overflow: hidden;;	
+			}
+		
+			#content-extra-inner {	
+			position: relative;
+			}
+		}
+	}
+	
+	.search-list {
+	min-height: 1000px;
+		.post-list, .rule, .page-links {
+		display: none;		
+		}	
+	}
+	
+	.search-results {
+	min-height: 260px;
+		h1, p, .search-form-wrap {
+		display: none;	
+		}
+	}
+	
+	.search-form-wrap {
+	height: 130px;
+		#searchform {
+		display: none;	
+		}
+	}
+	
+	#site-map-lists {
+	min-height: 400px;
+		.container-fluid {
+		display: none;	
+		}
+	}
+		
+	.post-grid {
+	
+		.row {
+		margin-bottom: 30px;
+			&:last-child {
+			margin-bottom: 0px;	
+			}	
+		}
+		
+		a {
+			display: block;
+			height: 200px;
+			position: relative;
+			text-decoration: none;
+			overflow: hidden;
+			background-color: @grayLt;
+				
+				span.link-bg-img {
+				display: none;	
+				}	
+					
+				span.title {
+				display: none;
+				}
+		
+			}
+	}
+	
+	.page-links {
+		height: 48px;
+		.wp-pagenavi {
+		display: none;	
+		}
+	}
+	
+	.archive-dropdowns {
+	height: 52px;
+		.container-fluid {
+		display: none;	
+		}	
+	}
+	
+	.toolkit-info {
+		.tk-info-wrap {
+		position: relative;		
+		}
+	
+		.tk-img {
+			position: absolute;
+			right: 10px;
+			top: 10px;
+			width: 220px;
+			height: 220px;
+			background-image: none !important;
+			background-color: @grayLt;
+			.rounded(100%);	
+			margin: 0px;
+		}
+		
+		.tk-info-txt {
+		padding-right: 250px;	
+			a {
+			color: @gray;
+			font-weight: bold;
+			}
+			
+			p, ul, ol {
+			font-size: 16px;
+			line-height: 20px;
+			margin-bottom: 20px;
+				&:last-child {
+				margin-bottom: 0px;	
+				}
+			}
+			
+			blockquote {
+			font-style: italic;
+			color: @gray;
+			border-color: @gray;
+			padding: 5px 0px 5px 0px;	
+			}
+			
+			h2, h3 {
+			font-size: 30px;
+			line-height: 35px;
+			margin-bottom: 20px;
+			color: @gray;
+			}
+			
+			h4, h5 {
+			font-size: 18px;
+			line-height: 22px;
+			margin-bottom: 10px;
+			color: @gray;
+			}	
+		}
+	}
+	
+	.pg-section {
+	min-height: 300px;
+	
+		h2.section-header {
+		.font-slab-serif;
+		color: @gray;
+		font-size: 30px;
+		line-height: 30px;
+		margin-bottom: 20px;
+		margin-top: 0px;
+		font-weight: normal;
+		}
+	
+		.lg-intro {
+		font-family: @reg-font;
+		color: @gray;
+			p {
+			font-size: 16px;
+			line-height: 21px;
+			}
+			hr {
+			border: none;
+			.rule;	
+			}	
+		}
+		.gallery-items, .faq-items, .faq-nav {
+		display: none;	
+		}
+		&#blog-posts {
+			.posts-grid {
+			display: none;	
+			}
+		}
+		&#form-section {
+			.gform_wrapper {
+			display: none !important;	
+			}
+		}
+		
+		&#toolkit-section {
+			.container {
+			min-height: 516px;	
+			}
+			
+			.row {
+			display: none;	
+			}
+		}
+		
+		&#credits-section {
+		min-height: inherit;
+			h2.section-header {
+			position: relative;
+			z-index: 2;
+			height: 36px;
+			text-indent: -9999px;
+			width: 300px;
+			border: 1px solid @gray;
+			margin: -48px auto 20px auto;
+			background-color: @grayLt;
+			color: @grayLt;	
+			}	
+			
+			.credit-items {
+			height: 230px;
+			}
+	
+			.credit {
+			display: none;
+			}
+		}
+
+	}
+	
+	#hp-form {
+	margin-top: 30px;
+	margin-bottom: 30px;
+	min-height: inherit;
+		.gform_wrapper {
+		margin: 0px;
+		background-color: @grayLt;	
+		min-height: 252px;
+		}
+		
+		form {
+		display: none;	
+		}
+	}
+	
 	.col-strip {
 	height: 10px;
 	z-index: 2;
@@ -485,46 +738,43 @@ font-family: sans-serif;
 		height: 10px;
 		width: 20%;
 		float: left;
-		border-right: 2px solid #fff	
+		border-right: 2px solid #fff;
+		background-color: @grayLt;	
+			&:last-child {
+			border: none;	
+			}
 		}	
-		
-		.col-purple {
-		background-color: #A677B4;	
-		}
-		
-		.col-green {
-		background-color: #ACD15C;
-		}
-		
-		.col-pink {
-		background-color: #EA5677;
-		}
-		
-		.col-orange {
-		background-color: #FBAD4F;	
-		}
-		
-		.col-blue {
-		background-color: #2D7EA9;
-		border: none;
-		}
 	}
-	
-	#hp-form {
-	margin-top: 40px;
-	margin-bottom: 40px;
-		.gform_wrapper {
-		border: 1px solid @grayDk;	
-		min-height: 150px;
+			
+	header[role="banner"] {
+	.trans-bg(@wht; 0.9);
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	right: 0px;
+	height: 80px;
+	z-index: 2;
+	overflow: hidden;
+		
+		a.logo {
+		display: block;
+		height: 75px;
+		max-width: 220px;
+		background-image: url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/img/tlw-logo-wide.svg');			
+		background-repeat: no-repeat;
+		background-position: center center;
+		background-size: contain;
+		-webkit-filter: grayscale(70%);
+		filter: grayscale(70%);
 		}
 		
-		form {
-		display: none;	
-		}
 	}
 	
 	#footer-info {
-	
+	min-height: 200px;
+		footer {
+		display: none;	
+		}	
 	}
 
 }
