--- a/_/less/vars.less
+++ b/_/less/vars.less
@@ -47,22 +47,22 @@
 
 @font-face {
     font-family: 'open_sanslight';
-    src: url('fonts/OpenSans-Light-webfont.eot');
-    src: url('fonts/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/OpenSans-Light-webfont.woff') format('woff'),
-         url('fonts/OpenSans-Light-webfont.ttf') format('truetype'),
-         url('fonts/OpenSans-Light-webfont.svg#open_sanslight') format('svg');
+    src: url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/fonts/OpenSans-Light-webfont.eot');
+    src: url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/fonts/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/fonts/OpenSans-Light-webfont.woff') format('woff'),
+         url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/fonts/OpenSans-Light-webfont.ttf') format('truetype'),
+         url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/fonts/OpenSans-Light-webfont.svg#open_sanslight') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'aleoreg';
-    src: url('fonts/aleo-regular-webfont.eot');
-    src: url('fonts/aleo-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/aleo-regular-webfont.woff') format('woff'),
-         url('fonts/aleo-regular-webfont.ttf') format('truetype'),
-         url('fonts/aleo-regular-webfont.svg#aleoregular') format('svg');
+    src: url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/fonts/aleo-regular-webfont.eot');
+    src: url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/fonts/aleo-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/fonts/aleo-regular-webfont.woff') format('woff'),
+         url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/fonts/aleo-regular-webfont.ttf') format('truetype'),
+         url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/fonts/aleo-regular-webfont.svg#aleoregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -70,11 +70,11 @@
 
 @font-face {
     font-family: 'aleobold';
-    src: url('fonts/aleo-bold-webfont.eot');
-    src: url('fonts/aleo-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/aleo-bold-webfont.woff') format('woff'),
-         url('fonts/aleo-bold-webfont.ttf') format('truetype'),
-         url('fonts/aleo-bold-webfont.svg#aleobold') format('svg');
+    src: url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/fonts/aleo-bold-webfont.eot');
+    src: url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/fonts/aleo-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/fonts/aleo-bold-webfont.woff') format('woff'),
+         url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/fonts/aleo-bold-webfont.ttf') format('truetype'),
+         url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/fonts/aleo-bold-webfont.svg#aleobold') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -82,18 +82,18 @@
 
 @font-face {
   font-family: 'FontAwesome';
-  src: url('fonts/fontawesome-webfont.eot?v=4.4.0');
-  src: url('fonts/fontawesome-webfont.eot?#iefix&v=4.4.0') format('embedded-opentype'), 
-  	   url('fonts/fontawesome-webfont.woff2?v=4.4.0') format('woff2'), 
-  	   url('fonts/fontawesome-webfont.woff?v=4.4.0') format('woff'), 
-  	   url('fonts/fontawesome-webfont.ttf?v=4.4.0') format('truetype'), 
-  	   url('fonts/fontawesome-webfont.svg?v=4.4.0#fontawesomeregular') format('svg');
+  src: url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/fonts/fontawesome-webfont.eot?v=4.4.0');
+  src: url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/fonts/fontawesome-webfont.eot?#iefix&v=4.4.0') format('embedded-opentype'), 
+  	   url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/fonts/fontawesome-webfont.woff2?v=4.4.0') format('woff2'), 
+  	   url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/fonts/fontawesome-webfont.woff?v=4.4.0') format('woff'), 
+  	   url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/fonts/fontawesome-webfont.ttf?v=4.4.0') format('truetype'), 
+  	   url('/wp-content/themes/tlwsolicitors-tablet-v6/_/css/fonts/fontawesome-webfont.svg?v=4.4.0#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
-@lite-font: "HelveticaNeue-Light", "Helvetica Neue Light", 'open_sanslight', "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-@reg-font: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+@lite-font: "HelveticaNeue-Light", "Helvetica Neue Light", 'open_sanslight', "Helvetica Neue", Helvetica, Arial, sans-serif;
+@reg-font: "Helvetica Neue", Helvetica, Arial, sans-serif;
 @cond-font: "nimbus-sans-condensed", "Open Sans Condensed", sans-serif;
 @serif-font: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
 @slab-serif: "aleoreg", "Helvetica Neue", Helvetica, Arial, sans-serif;
