--- a/_/less/criticalCSS.less
+++ b/_/less/criticalCSS.less
@@ -253,6 +253,7 @@ font-family: sans-serif;
 	
 	#slim-top-banner {
 	height: 250px;
+	overflow: hidden;
 		
 		.container-fluid, .row, .col-md-10 {
 		height: 100%;
@@ -269,7 +270,7 @@ font-family: sans-serif;
 		background-color: @grayLt;
 		}
 	
-		.banner-title, i {
+		.banner-title, i.fa {
 		display: none;	
 		}
 	}
