--- a/_/less/criticalCSS.less
+++ b/_/less/criticalCSS.less
@@ -360,7 +360,8 @@ font-family: sans-serif;
 	section#video-banner {
 	
 		.video-wrapper {
-		border: 1px solid @grayDk;
+		border: 1px solid @grayLt;
+		background-color: @grayLt;
 		height: 414px;
 		overflow: hidden;
 			@media screen and (orientation: landscape) {
