Fix content read more scroll to js function

--- a/_/less/content.less
+++ b/_/less/content.less
@@ -5,11 +5,11 @@ overflow-wrap: break-word;
 }
 
 h1, h2 {
-.font-size(3);	
-.line-h(3.5);
+.font-size(2.5);	
+.line-h(3);
 .mag-bot(2);
 	small {
-	.font-size(2);	
+	.font-size(1.6);	
 	}
 }
 
@@ -28,8 +28,6 @@ p {
 	&.lead {
 	.bold;
 	.txt-col-grayDk;	
-	.font-size(1.6);
-	.line-h(2.1);
 	}
 }
 
@@ -309,14 +307,11 @@ article.tlw_landing_page {
 		}
 		
 		h2, h3, h4, h5 {
-		.font-slab-serif;	
-		}
-		
-		h2, h3, h4, h5 {
-		.font-size(1.8);
-		.line-h(2.2);
-		.mag-bot(1);
-		.txt-col-gray;
+		.font-size(2);
+		.line-h(2.5);
+		.mag-bot(2);
+		.txt-col-grayDk;
+		.bold;
 		}
 			
 	}
