Remove blur on loading

--- a/_/less/global.less
+++ b/_/less/global.less
@@ -35,12 +35,15 @@ opacity: 1;
 	.fadeIn;		
 	}
 	
+	&.loading {
+	overflow: hidden;	
+	}
+	
 	&.nav-open, 
 	&.modal-open,
 	&.search-open,
 	&.route-finder-open,
-	&.video-open,
-	&.loading {
+	&.video-open {
 	overflow: hidden;
 		.tlw-wrapper > * {
 		-webkit-filter: blur(5px);
