Change banner tag the current page title and change FAQ's question font and color

--- a/_/less/sections.less
+++ b/_/less/sections.less
@@ -535,9 +535,9 @@ section#contact-us-banner {
 		.question {
 		.font-size(2);
 		.line-h(2.5);
-		.txt-col-gray;
+		.txt-col-grayDk;
 		.mag-bot(1);
-		.font-slab-serif;
+		.bold;
 		}	
 		
 		.answer p {
