--- a/_/less/criticalCSS.less
+++ b/_/less/criticalCSS.less
@@ -62,13 +62,13 @@ font-family: sans-serif;
 	clear: both;	
 	}
 
-	.tlw-wrapper {
 	position: relative;
 	background-color: white;
 	height: 100%;
 	min-height: 100%;
 	overflow: hidden;	
-	}
+	
+	.tlw-wrapper {}
 	
 	#main-content {
 	position: absolute;
