--- a/_/less/global.less
+++ b/_/less/global.less
@@ -87,6 +87,73 @@ h2,h3,h4,h5 {
 font-weight: normal;	
 }
 
+#loader {
+.abs;
+.left(0);
+.right(0);
+.top(0);
+.bottom(0);
+.trans-bg(@wht; 0.7);
+z-index: 1004002;
+
+	.sk-wave {
+	 position: absolute;
+	 left: 50%;
+	 top: 50%;
+	 transform: translate(-50%, -50%);
+	 // margin: 40px auto;
+	 width: 100px;
+	 height: 100px;
+	 text-align: center;
+	 font-size: 10px; 
+	 }
+	  
+	.sk-wave .sk-rect {
+	    background-color: #333;
+	    height: 100%;
+	    width: 15px;
+	    display: inline-block;
+	    margin: 0px 2px;
+	    -webkit-animation: sk-waveStretchDelay 1.2s infinite ease-in-out;
+	            animation: sk-waveStretchDelay 1.2s infinite ease-in-out; }
+	.sk-wave .sk-rect1 {
+		  .bg-col-purple;
+	    -webkit-animation-delay: -1.2s;
+	            animation-delay: -1.2s; }
+	.sk-wave .sk-rect2 {
+		  .bg-col-green;
+	    -webkit-animation-delay: -1.1s;
+	            animation-delay: -1.1s; }
+	.sk-wave .sk-rect3 {
+		  .bg-col-pink;
+	    -webkit-animation-delay: -1s;
+	            animation-delay: -1s; }
+	.sk-wave .sk-rect4 {
+		  .bg-col-orange;
+	    -webkit-animation-delay: -0.9s;
+	            animation-delay: -0.9s; }
+	.sk-wave .sk-rect5 {
+		  .bg-col-blue;
+	    -webkit-animation-delay: -0.8s;
+	            animation-delay: -0.8s; }
+	
+	@-webkit-keyframes sk-waveStretchDelay {
+	  0%, 40%, 100% {
+	    -webkit-transform: scaleY(0.4);
+	            transform: scaleY(0.4); }
+	  20% {
+	    -webkit-transform: scaleY(1);
+	            transform: scaleY(1); } }
+	
+	@keyframes sk-waveStretchDelay {
+	  0%, 40%, 100% {
+	    -webkit-transform: scaleY(0.4);
+	            transform: scaleY(0.4); }
+	  20% {
+	    -webkit-transform: scaleY(1);
+	            transform: scaleY(1); } }
+}
+
 .tlw-wrapper {
 .rel;
 .bg-col(white);
