--- a/_/less/header.less
+++ b/_/less/header.less
@@ -13,7 +13,7 @@ z-index: 2;
 	.block;
 	.h(7.5);
 	.max-w(22);
-	.bg-img("tlw-logo-wide.png");
+	.bg-img("tlw-logo-wide.svg");
 	.bg-repeat(no-repeat);
 	background-position: left center;
 	.bg-size(contain);
@@ -56,11 +56,11 @@ z-index: 2;
 	}
 }
 
-html.svg {
+html.no-svg {
 	header[role="banner"] {
 		
 		a.logo {
-		.bg-img("tlw-logo-wide.svg");
+		.bg-img("tlw-logo-wide.png");
 		}
 	}
 }
