--- a/_/less/top-nav.less
+++ b/_/less/top-nav.less
@@ -8,7 +8,7 @@ overflow: hidden;
 	}
 
 	&.nav-open {
-	height: 95vh;
+	height: 80vh;
 	//.pad-bot(0);
 	z-index: 1000;
 	}
@@ -20,6 +20,7 @@ overflow: hidden;
 	.pad-bot(5);
 	height: 100%;
 	overflow-y: scroll;
+	.border-bot(@grayDk; 0.1);
 	}
 	
 	button#close-nav {
