--- a/_/less/mixins.less
+++ b/_/less/mixins.less
@@ -406,15 +406,15 @@ border-radius: 0px;
 	}
 
 	&:before {
-	left: 0px;
 	bottom: -1px;
-	background-image: linear-gradient(to left, @gray, transparent);
+	left: 0px;
+	background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(145,143,143,1) 30%); 
 	}
 
 	&:after {
 	right: 0px;
 	bottom: -1px;
-	background-image: linear-gradient(to left, transparent, @gray);
+	background: linear-gradient(to left, rgba(255,255,255,0) 0%, rgba(145,143,143,1) 30%); 
 	}
 
 }
