Clean up fonts and images as they are used from the desktop template

--- a/_/less/user-styles.less
+++ b/_/less/user-styles.less
@@ -4,9 +4,9 @@ body#login {
 	width: 100%;
 	height: 100%;
 	.min-h(40);
-	.bg-img('user-bg.png');
+	.bg-img('TLW-offline-bg.png');
 	.bg-repeat(no-repeat);
-	background-position: center center;
+	background-position: right center;
 	.bg-col(@grayLt);
 	.bg-size;
 	.rel;
@@ -20,7 +20,6 @@ body#login {
 	text-align: center;	
 	.pad-all(2);
 	height: 100%;
-	.bg-img('thin-stripe-wht.png');
 		&:before {
 			content: "";
 			.in-block;
