Change Feefo panel on home page sidebar

--- a/_/less/sections.less
+++ b/_/less/sections.less
@@ -284,25 +284,8 @@ section#contact-us-banner {
 		
 		.star-rating {
 		.rel;
-		.h(3);
-			.col-bar {
-			position: absolute;
-			.top(0);
-			.left(0);
-			height: 100%;
-			.bg-col(@feefoCol);	
-			}
-			.stars {
-			position: absolute;
-			.top(0);
-			.left(0);
-			height: 100%;
-			width: 100%;
-			.bg-img('feefo-stars.png');
-			.bg-repeat(no-repeat);
-			background-position: center center;
-			.bg-size();	
-			}		
+		.col(@feefoCol);
+		.text-center;
 		}
 	}
 	a.btn {
